# html_compile

./: Cargo.toml  LICENSE  README.md
example/: .input.html.swp  Cargo.toml  input.html  output.html
example/src/: main.rs
src/: compile.rs  compile_html.rs  component_types.rs  lib.rs  macros.rs  main.rs  types.rs
tests/: build_component_tests.rs
tests/src/: index.html
