[package]
name = "html_compile"
license="MIT"
version = "0.2.1"
edition = "2021"
description="A template engine for generating HTML strings within Rust for use with static websites"
readme="README.md"
repository="https://github.com/apburnie/html_compile"
homepage="https://github.com/apburnie/html_compile"
documentation="https://docs.rs/html_compile"

[dependencies]
